# smfs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  install.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
bash/: package.json
bash-py/: README.md  pyproject.toml
bash-py/examples/: anthropic_agent.py  langchain_agent.py  openai_agent.py
bash-py/supermemory_bash/: __init__.py  _client.py  _errors.py  _filepath.py  _parse.py  _path_index.py  _session_cache.py  _shell.py  _tool_description.py  _validation.py  _volume.py
bash-py/supermemory_bash/_vendor/just_bash/: LICENSE  __init__.py
bash-py/supermemory_bash/_vendor/just_bash/parser/: parser.py
bash-py/tests/: test_agent_loop.py  test_filepath.py  test_integration.py  test_path_index.py  test_shell.py  test_validation.py  test_volume.py
bash/src/: tool-description.ts  volume.ts
crates/smfs/: Cargo.toml
crates/smfs-core/: Cargo.toml
crates/smfs-core/src/: agent_hint.rs  lib.rs
crates/smfs-core/src/api/: dto.rs  error.rs  mod.rs
crates/smfs-core/src/cache/: db.rs  file.rs  fs.rs  mod.rs  schema.sql  tests.rs
crates/smfs-core/src/config/: credentials.rs  mod.rs
crates/smfs-core/src/daemon/: ipc.rs  mod.rs  protocol.rs
crates/smfs-core/src/mount/: fuse.rs  mod.rs  nfs.rs
crates/smfs-core/src/sync/: mod.rs  pull.rs  push.rs  scan.rs
crates/smfs-core/src/vfs/: error.rs  mem.rs  mod.rs  mode.rs  path.rs  traits.rs  types.rs
crates/smfs/src/: main.rs
crates/smfs/src/cmd/: auth.rs  daemon_inner.rs  daemon_runtime.rs  grep.rs  init.rs  list.rs  login.rs  logout.rs  marker.rs  mod.rs  mount.rs  startup.rs  status.rs  unmount.rs  whoami.rs
docker/: Dockerfile.release
mount/: Cargo.toml
mount/crates/smfs-core/src/api/: dto.rs  error.rs  mod.rs
mount/crates/smfs-core/src/cache/: db.rs  file.rs  fs.rs  mod.rs  profile.rs  schema.sql  tests.rs
mount/crates/smfs-core/src/config/: mod.rs
mount/crates/smfs-core/src/daemon/: client.rs  ipc.rs  mod.rs  protocol.rs
mount/crates/smfs-core/src/mount/: fuse.rs  mod.rs  nfs.rs
mount/crates/smfs-core/src/sync/: mod.rs  pull.rs  push.rs  scan.rs
mount/crates/smfs/src/cmd/: daemon_inner.rs  daemon_runtime.rs  grep.rs  init.rs  install.rs  list.rs  logs.rs  mod.rs  mount.rs  status.rs  sync.rs
