[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supermemory-bash"
version = "0.0.1"
description = "Virtual bash environment for AI agents, backed by Supermemory."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["bash", "supermemory", "ai", "agent", "filesystem", "tool-use", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/supermemoryai/smfs/tree/main/bash-py#readme"
Repository = "https://github.com/supermemoryai/smfs"
Issues = "https://github.com/supermemoryai/smfs/issues"

[tool.hatch.build.targets.wheel]
packages = ["supermemory_bash"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
